[gd_scene load_steps=8 format=3 uid="uid://bm577q1sb7uvc"]

[ext_resource type="Script" path="res://Scripts/UI/game_over_screen.gd" id="1_wfx23"]
[ext_resource type="Texture2D" uid="uid://j5skgnhmsp58" path="res://Spritesheets/Misc/skull.png" id="2_jf5pg"]
[ext_resource type="Texture2D" uid="uid://dld1vk34mip8s" path="res://Spritesheets/Misc/timer.png" id="3_y1p7a"]
[ext_resource type="Texture2D" uid="uid://b077kykmptpfb" path="res://Spritesheets/Misc/material.png" id="4_dpp38"]

[sub_resource type="SystemFont" id="SystemFont_wm422"]

[sub_resource type="LabelSettings" id="LabelSettings_acaxe"]
font = SubResource("SystemFont_wm422")
font_size = 75
shadow_size = 10
shadow_color = Color(0, 0, 0, 0.2)
shadow_offset = Vector2(3, 5)

[sub_resource type="Theme" id="Theme_je7ci"]
default_font_size = 45

[node name="GameOverScreen" type="Control" node_paths=PackedStringArray("enemies_defeated_number", "upgrade_material_gained")]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.997972, 0.994074)
script = ExtResource("1_wfx23")
enemies_defeated_number = NodePath("PanelContainer/VBoxContainer/GridContainer/EnemiesDefeatedNumber")
upgrade_material_gained = NodePath("PanelContainer/VBoxContainer/GridContainer/UpgradeMaterialGainedNumber")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -203.5
offset_top = -162.5
offset_right = 203.5
offset_bottom = 162.5
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
custom_minimum_size = Vector2(300, 325)
layout_mode = 2

[node name="GameOver" type="Label" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
text = "Game Over"
label_settings = SubResource("LabelSettings_acaxe")
horizontal_alignment = 1
vertical_alignment = 1

[node name="GridContainer" type="GridContainer" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 3
columns = 3

[node name="SkullIcon" type="TextureRect" parent="PanelContainer/VBoxContainer/GridContainer"]
layout_mode = 2
texture = ExtResource("2_jf5pg")
expand_mode = 3
stretch_mode = 5

[node name="EnemiesDefeatedText" type="Label" parent="PanelContainer/VBoxContainer/GridContainer"]
custom_minimum_size = Vector2(0, 35)
layout_mode = 2
text = "Enemies defeated:  "
horizontal_alignment = 1
vertical_alignment = 1

[node name="EnemiesDefeatedNumber" type="Label" parent="PanelContainer/VBoxContainer/GridContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 25)
layout_mode = 2
text = "100"
horizontal_alignment = 1
vertical_alignment = 1

[node name="TimeIcon" type="TextureRect" parent="PanelContainer/VBoxContainer/GridContainer"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2
texture = ExtResource("3_y1p7a")
expand_mode = 3
stretch_mode = 5

[node name="TimeText" type="Label" parent="PanelContainer/VBoxContainer/GridContainer"]
custom_minimum_size = Vector2(0, 35)
layout_mode = 2
text = "Survived Time:"
horizontal_alignment = 1
vertical_alignment = 1

[node name="TimeTextNumber" type="Label" parent="PanelContainer/VBoxContainer/GridContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 35)
layout_mode = 2
text = "10:00
"
horizontal_alignment = 1
vertical_alignment = 1

[node name="MaterialIcon" type="TextureRect" parent="PanelContainer/VBoxContainer/GridContainer"]
layout_mode = 2
texture = ExtResource("4_dpp38")
expand_mode = 3
stretch_mode = 5

[node name="UpgradeMaterialGainedText" type="Label" parent="PanelContainer/VBoxContainer/GridContainer"]
custom_minimum_size = Vector2(0, 35)
layout_mode = 2
text = "Upgrade Material Gained:   "
horizontal_alignment = 1
vertical_alignment = 1

[node name="UpgradeMaterialGainedNumber" type="Label" parent="PanelContainer/VBoxContainer/GridContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 35)
layout_mode = 2
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="BackToHub" type="Button" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme = SubResource("Theme_je7ci")
text = "Back to Hub
"
autowrap_mode = 2

[connection signal="pressed" from="PanelContainer/VBoxContainer/BackToHub" to="." method="_on_back_to_hub_pressed"]
